--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
-body {
-	background-color: #efefef;
-	font-family: 'Montserrat', sans-serif;
-}
-
 *, *::before, *::after {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+}
+
+body {
+	background-color: #efefef;
+	font-family: 'Montserrat', sans-serif;
 }
 
 .signup-wrapper {
@@ -22,7 +22,6 @@ body {
 	text-align: center;
 	color: #2CA8FF;
 	font-weight: bold;
-	text-transform: uppercase;
 	margin-bottom: 50px;
 }
 
@@ -53,8 +52,12 @@ body {
 	color: #fff;
 	font-size: 14px;
 	font-weight: lighter;
-	text-align: center;
 	border-radius: 3px;
+}
+
+.reset-pass {
+	font-size: 14px;
+	margin-top: 20px;
 }
 
 
