--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
-*, *::before, *::after {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 body {
@@ -60,6 +60,26 @@ body {
 	margin-top: 20px;
 }
 
+.err-block {
+	width: 400px;
+	margin: 30px auto;
+	padding: 10px 0;
+	background-color: rgb(255, 232, 232);
+	border: 1px solid red;
+}
+
+.err-block > ul {
+	margin: 0;
+}
+
+.err-block > ul >li {
+	font-size: 13px;
+	color: red;
+	margin: 2px 0;
+}
+
+
+
 
 
 
@@ -69,7 +89,7 @@ body {
 
 /*   delete style when complete with project   */
 .space {
-	margin-bottom: 100px;
+	margin-bottom: 50px;
 }
 
 .well {
