--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,7 @@ body {
 	padding: 10px 0;
 	background-color: rgb(255, 232, 232);
 	border: 1px solid red;
+	border-radius: 3px;
 }
 
 .err-block > ul {
@@ -87,9 +88,11 @@ body {
 
 
 
+
+
 /*   delete style when complete with project   */
 .space {
-	margin-bottom: 50px;
+	margin-bottom: 200px;
 }
 
 .well {
