--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,11 @@ body {
 
 .reset-pass {
 	font-size: 14px;
-	margin-top: 20px;
+	margin-top: -30px;
+}
+
+.reset-btn {
+	width: 200px;
 }
 
 .err-block {
