--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+	font-size: 16px;
 	background-color: #efefef;
 	font-family: 'Montserrat', sans-serif;
 }
@@ -174,7 +175,53 @@ body {
 	text-decoration: none;
 }
 
+.nav-container {
+	background-color: #2CA8FF;
+}
 
+.nav-wrapper {
+	width: 80%;
+	margin: 0 auto;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 15px 10px;
+}
+
+.logo {
+	color: #fff;
+	font-size: 20px;
+	font-weight: bolder;
+}
+
+.nav-links {
+	list-style: none;
+}
+
+.nav-links li {
+	display: inline-block;
+	padding: 0px 20px;
+}
+
+.nav-links li a {
+	transition: all 0.3s ease 0s;
+	color: #fff;
+}
+
+.nav-links li a:hover {
+	color: #0088a9;
+}
+
+.cta {
+	color: #fff;
+	width: 100%;
+	margin: 0 auto;
+	border: 1px solid #fff;
+	text-align: center;
+	font-size: 14px;
+	padding: 8px 40px;
+	border-radius: 3px;
+}
 
 
 
