--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,6 +259,29 @@ body {
 }
 
 
+/**** gallery styles *****/
+.gallery-container {
+	width: 80%;
+	margin: 0 auto;
+	display: grid;
+	grid-template-columns: 100%;
+	grid-row-gap: 10px;
+}
+
+@media screen and (min-width: 600px) {
+	.gallery-container {
+		grid-template-columns: 50% 50%;
+		grid-column-gap: 10px;
+	}
+}
+
+@media screen and (min-width: 850px) {
+	.gallery-container {
+		width: 770px;
+		grid-template-columns: auto auto auto;
+		grid-column-gap: 10px;
+	}
+}
 
 
 
@@ -273,6 +296,6 @@ body {
 
 .well {
 	width: 100%;
-	height: 200px;
+	height: 250px;
 	background: #ccc;
 }
