--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .signup-wrapper {
-	width: 400px;
+	width: 90%;
 	margin: 0 auto;
 	padding: 30px;
 	background-color: #fff;
@@ -67,7 +67,7 @@ body {
 }
 
 .err-block {
-	width: 400px;
+	width: 90%;
 	margin: 30px auto;
 	padding: 10px 0;
 	background-color: rgb(255, 232, 232);
@@ -86,12 +86,26 @@ body {
 }
 
 .profile-wrapper {
-	width: 400px;
+	width: 90%;
 	margin: 0 auto;
 	padding: 80px 30px;
 	background-color: #fff;
 	box-shadow: 0 0 4px rgba(0,0,0,0.15);
 	border-radius: 3px;
+}
+
+@media screen and (min-width: 425px) {
+	.signup-wrapper {
+		width: 400px;
+	}
+
+	.profile-wrapper {
+		width: 400px;
+	}
+
+	.err-block {
+		width: 400px;
+	}
 }
 
 .profile-img {
@@ -456,14 +470,24 @@ body {
 
 /****  post page    ****/
 .main-container {
-	width: 880px;
+	width: 90%;
 	margin: 20px auto;
 }
 
 .video-preview-area {
-	display: grid;
-	grid-template-columns: 400px 400px;
-	grid-column-gap: 80px;
+	display: none;
+}
+
+@media screen and (min-width: 1000px) {
+	.main-container {
+		width: 880px;
+	}
+
+	.video-preview-area {
+		display: grid;
+		grid-template-columns: 400px 400px;
+		grid-column-gap: 80px;
+	}
 }
 
 .video-area {
@@ -473,12 +497,24 @@ body {
 
 .uploaded-images-area {
 	display: grid;
-	grid-template-columns: 100px 100px 100px;
-	grid-column-gap: 10px;
+	grid-template-columns: repeat(2, auto);
+	grid-gap: 10px;
+}
+
+@media screen and (min-width: 600px) {
+	.uploaded-images-area{
+		grid-template-columns: repeat(4, auto);
+	}
+}
+
+@media screen and (min-width: 1000px) {
+	.uploaded-images-area{
+		grid-template-columns: repeat(8, auto);
+	}
 }
 
 .col-row {
-	margin: 20px 0;
+	margin: 10px 0;
 }
 
 .webcam-btn-wrap {
@@ -500,13 +536,32 @@ body {
 	height: 30px;
 }
 
-
-
-/* remove when done stying post page */
 .cell-2 {
 	width: 100%;
 	height: 100px;
 	background-color: #888;
 }
+
+.uploaded-images-text {
+	font-weight: bold;
+	color: #888;
+}
+
+.webcam-btn {
+	display: inline-block;
+	padding: 6px 8px;
+	width: 140px;
+	background-color: #2CA8FF;
+	border: 1px solid transparent;
+	color: #fff;
+	font-size: 14px;
+	font-weight: lighter;
+	border-radius: 3px;
+}
+
+.margin-top-upload {
+	margin-top: 10px;
+}
+
 
 
